--- a/angular.json
+++ b/angular.json
@@ -87,6 +87,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -94,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "2ca9eb31-dd41-4f14-b706-bb216a036ac6"
   }
 }
