--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "front-end",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "ng build --prod"
   },
   "private": true,
   "dependencies": {
