--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "front-end",
   "version": "0.0.0",
   "scripts": {
-    "build": "ng build"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
